# 1

./: .dockerignore  .env.example  .gitignore  403_DIAGNOSIS_FINAL.md  5 分项目验证报告.md  API 接口文档.md  API 文档.md  API_FIX_PROGRESS.md  AUTH_FIX_FINAL_REPORT.md  BROWSER_TEST_README.md  CHANGELOG.md  CI_CD_GUIDE.md  CLI_MAINTENANCE.md  CODE_WIKI.md  COMPLETION_REPORT.md  COMPREHENSIVE_FIX_REPORT.md  CONTRIBUTING.md  Cargo.toml  DEPLOY_FIX_PLAN.md  DEPLOY_README.md  DIAGNOSIS_UPDATE.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  ERP 系统全栈开发最终总结报告.md  ERP 系统开发进度总结.md  FINAL_FIX_REPORT.md  FINAL_SUMMARY.md  FIXES_SUMMARY.md  FIX_COMPLETION_REPORT.md  FIX_PLAN.md  HISTORICAL_ISSUES_REPORT.md  Handler 层和路由注册完成报告.md  LICENSE  MAINTENANCE_SUMMARY.md  MEMORY.md  MERGE_SUMMARY.md  P0 级模块开发完成总结.md  P0 级模块开发进度总览.md  (+222 more)
backend/: .clippy-baseline.txt  .clippy.toml  .env.example  .gitignore  .test-baseline.txt  Cargo.toml  Cargo.toml.hash  DEPLOYMENT_GUIDE.md  DOWNLOAD_MINGW_MANUALLY.md  Dockerfile  ENVIRONMENT_SETUP.md  FINAL_SETUP_GUIDE.md  IMPLEMENTATION_PLAN.md  INSTALL_PROTOC.md  LINKER_INSTALL_GUIDE.md  MINGW_SETUP_SUMMARY.md  MISSING_FUNCTIONS_REPORT.md  add_chrono_imports.ps1  add_columns.sql  add_decimal_imports.ps1  backend_warnings.txt  build.bat  build.rs  build.sh  build_errors.txt  build_errors_full.txt  build_errors_latest.txt  build_output.txt  cargo_check_errors.txt  check_admin_remote.py  check_build.bat  check_errors.txt  check_errors_latest.txt  check_errors_new.txt  check_full_output.txt  check_locks.py  check_output.txt  cleanup_duplicate_chrono.ps1  cleanup_duplicates.ps1  cleanup_unused_imports.ps1  (+148 more)
backend/.cargo/: audit.toml  config.toml
backend/benches/: dye_cost_collection_bench.rs  inventory_calculation_bench.rs  voucher_generation_bench.rs  wage_calculation_bench.rs
backend/database/: init_admin_permissions.sql  init_data.sql  migration_improvements.sql  rls.sql
backend/database/archive_old_migrations/: 002_inventory_reservation.sql  003_customers.sql  007_purchase_management.sql  008_accounts_payable.sql  011_inventory_count_items.sql  014_cost_management.sql  015_fixed_assets.sql  016_purchase_contract.sql  018_customer_credit.sql  019_financial_analysis.sql  020_supplier_evaluation.sql  021_fund_management.sql  022_budget_management.sql  023_purchase_price.sql  024_sales_price.sql  026_sales_analysis.sql  027_quality_inspection.sql  028_quality_standard.sql  030_extend_existing_tables.sql  035_oa_collaboration.sql  036_data_visualization.sql  037_test_data.sql  040_supplier_product_mapping.sql  042_five_dimension_optimization.sql  043_business_trace_optimization.sql
backend/database/migration/: 001_consolidated_schema.sql  001_init.sql  002_alter_timestamps_to_timestamptz.sql  002_inventory_reservation.sql  003_color_cards.sql  003_foreign_keys.sql  004_customers.sql  (+75 more)
backend/docs/: API 接口文档.md  API.md  README.md  SUMMARY.md  TOOLS_GUIDE.md  audit_manual.md  audit_report_2026-05-09.md  complete_issues_and_improvements.md  comprehensive_audit_architecture.md  comprehensive_audit_report.md  detailed_audit_report.md  erp_api_test_report_20260525.md  erp_comprehensive_test_report_20260525.md  execution_plan.md  fix_summary.md  postman_collection.json  系统功能检测与完善方案.md  编译错误修复进度报告.md  编译错误分析报告.md
backend/hasher_tool/: Cargo.toml
backend/migration/: Cargo.toml
backend/migrations/: color_card_migrate_legacy.sql
backend/proto/: bingxi.proto
backend/scripts/: p2-2-n1-scan.sh  p2-2-slow-query.sql  performance_test_ab.sh  performance_test_wrk.sh
backend/src/: constants.rs  docs.rs  lib.rs  main.rs  openapi.rs  telemetry.rs
backend/tests/: ai_extend_test.rs  ap_payment_workflow_test.rs  api_test.rs  auth_integration_test.rs  auth_service_unit_test.rs  bi_analysis_test.rs  cache_test.rs  color_card_borrow_test.rs  color_card_crud_test.rs  color_card_e2e_test.rs  color_card_issue_test.rs  color_card_item_test.rs  color_card_scan_test.rs  color_price_batch_test.rs  color_price_calc_test.rs  color_price_crud_test.rs  color_price_history_test.rs  color_price_seasonal_test.rs  config_database_test.rs  custom_order_aftersales_test.rs  custom_order_e2e_test.rs  custom_order_process_test.rs  custom_order_quality_test.rs  custom_order_state_machine_test.rs  custom_order_state_test.rs  dye_batch_workflow_test.rs  failover_circuit_test.rs  failover_config_test.rs  failover_metrics_test.rs  failover_trait_test.rs  high_impact_regressions_test.rs  init_service_test.rs  lab_dip_workflow_test.rs  management_services_integration_test.rs  permission_middleware_test.rs  permission_test.rs  production_order_workflow_test.rs  production_recipe_workflow_test.rs  purchase_receipt_workflow_test.rs  quotation_approval_test.rs  (+36 more)
frontend/: .env.development  .env.production.example  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  .utoo.toml  Cargo.toml  Dockerfile  P2 服务前端开发完成报告.md  P2 服务前端开发指南.md  Trunk.toml  apply_crud.py  build.bat  build.sh  build2.txt  build3.txt  build_errors.txt  build_full.txt  check_alert.js  check_console_errors.js  check_remaining_errors.js  check_users.py  components.d.ts  comprehensive_test.cjs  debug_request.js  fix_all.py  fix_all_imports.py  fix_compile_errors.py  fix_enums.py  fix_errors_r6.py  fix_fabric_order.py  fix_forms.py  fix_frontend_errors.py  fix_greige_sed.py  fix_greige_sed2.py  fix_layout.py  fix_layouts.sh  fix_pages.sh  (+58 more)
frontend/docs/: architecture.md  frontend-feature-implementation-plan-full.md  frontend-feature-implementation-plan.md
frontend/e2e/: color-card.spec.ts  color-price.spec.ts  custom-order.spec.ts
frontend/scripts/: README.md  check_console_errors.js  check_remaining_errors.js  comprehensive_test.cjs  full_test.js  gen-test-data.ts  p2-2-perf-baseline.mjs  p2-3-perf-report.md  p2-3-perf-test.mjs  poc-perf-test.cjs
frontend/src/: App.vue  main.rs  main.ts  patch_payment_listener.py
frontend/static/: dashboard.css
frontend/styles/: main.css
frontend/tests/: print_test.rs  setup.ts
microservices/notifications/: Cargo.toml  Dockerfile  README.md  build.rs
(+2895 files in other folders)
