[package]
name = "bingxi-backend"
version = "2026.522.2"
edition = "2021"
authors = ["BingXi Team"]
description = "面料管理 - Rust 后端服务"

[dependencies]
# Web 框架
axum = { version = "0.7", features = ["json", "multipart", "macros"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "set-header"] }

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 数据库
sea-orm = { version = "2.0.0-rc.40", features = ["sqlx-postgres", "runtime-tokio", "macros", "with-rust_decimal", "with-chrono"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono", "uuid", "json", "macros", "tls-rustls"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 认证与安全
argon2 = "0.5"
uuid = { version = "1.0", default-features = false, features = ["serde", "v4"] }
jsonwebtoken = "9.0"

# 验证
validator = { version = "0.16", features = ["derive"] }
regex = "1.10"

# 配置
config = "0.14"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# 时间 - 纯Rust实现
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }

# 小数处理
rust_decimal = { version = "1.0", features = ["serde"] }

# gRPC

# 错误处理
thiserror = "1.0"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json"] }

# Base64编码
base64 = "0.22"

# ZIP 压缩
zip = "2.2"

# PDF 生成
printpdf = "0.7"

# 监控
prometheus = "0.13"

# 并发数据结构
dashmap = "5.5"

# 其他
futures = "0.3"

# 定时任务
tokio-cron-scheduler = "0.10"

# 额外工具

# CLI 工具
clap = { version = "4.4", features = ["derive"] }

# API 文档
utoipa = { version = "5.2.0", features = ["axum_extras"] }
axum-extra = { version = "0.9.3", features = ["cookie", "cookie-private", "cookie-key-expansion"] }
totp-rs = { version = "5.5", features = ["qr", "gen_secret"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"], optional = true }
percent-encoding = "2.3.1"
fastrand = "2.4.0"
hex = "0.4.3"
hmac = "0.12"
sha2 = "0.10"
subtle = "2.6"



# CSV处理
csv = "1.3"

# Excel处理
migration = { version = "0.1.0", path = "migration" }

# 事件总线（Kafka 后端，rskafka 0.5 纯 Rust 实现，无 C/C++ 依赖）
rskafka = { version = "0.5", default-features = false }

[dev-dependencies]
# 开发测试相关依赖
tokio-test = "0.4"
mockall = "0.12"
tower = "0.5"
# 测试环境使用 SQLite
sea-orm = { version = "2.0.0-rc.40", features = ["sqlx-sqlite", "runtime-tokio"] }

[build-dependencies]

[[bin]]
name = "server"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = 0

[profile.release]
opt-level = 2
lto = false
codegen-units = 16
debug = false

[profile.test]
opt-level = 0
debug = 0
codegen-units = 16
lto = false

[[bin]]
name = "hash_password"
path = "src/bin/hash_password.rs"

[[bin]]
name = "bingxi"
path = "src/bin/cli.rs"

[workspace]
members = [".", "migration"]

[features]
default = []
swagger = ["utoipa-swagger-ui"]

# Lint 配置（clippy 1.81+ 顶层 warn 数组已弃用，改用 Cargo.toml [lints] 段）
# - [lints.rust]    段配置标准 rustc lint（如 dead_code、unused_*）
# - [lints.clippy]  段配置 clippy 自有 lint
# 死代码策略：CI 强制（见 .clippy.toml 注释与项目规则）
[lints.rust]
dead_code = "warn"
unused_imports = "warn"
unused_variables = "warn"

