[package]
name = "bingxi_frontend"
version = "1.0.99"
edition = "2021"
description = "秉羲管理系统前端 - Yew + Utoo"
authors = ["秉羲团队"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlFormElement",
    "HtmlCollection",
    "Storage",
    "console",
] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
gloo = { version = "0.10", features = ["futures"] }
gloo-net = "0.4"
gloo-timers = "0.3"
# 时间 - WASM兼容
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
thiserror = "1.0"
tracing = "0.1"
tracing-web = "0.1"
log = "0.4"
percent-encoding = "2.3"
rust_decimal = { version = "1.41.0", features = ["serde"] }
urlencoding = "2.1.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 's'
lto = false
codegen-units = 8
strip = true

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'
strip = true
