[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]

[dependencies.sea-orm-migration]
# 与主 crate sea-orm 1.1.20 保持一致，避免编译时同时加载两版 sea-orm
version = "1.1.20"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  # "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  # "sqlx-postgres",         # `DATABASE_DRIVER` feature
]

# Lint 配置（与主 crate 保持一致；workspace 段不传递给子 crate）
[lints.rust]
dead_code = "warn"
unused_imports = "warn"
unused_variables = "warn"

