[package]
name = "notifications-service"
version = "0.1.0"
edition = "2021"
authors = ["Trae Solo Agent"]
description = "P3-1 微服务拆分 demo：notifications 独立 gRPC 服务"

[[bin]]
name = "notifications-service"
path = "src/main.rs"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }
